--- a/client/template.html
+++ b/client/template.html
@@ -5,10 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style type="text/css">
+      body,html {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+      }
+    </style>
 </head>
 <body>
-    <div>
-        <div id="root"><!-- App --></div>
-    </div>
+  <div id="root">
+    <!-- App -->
+  </div>
 </body>
 </html>
